--- a/SCSS/sections/_project-showcase-vertical.scss
+++ b/SCSS/sections/_project-showcase-vertical.scss
@@ -9,6 +9,8 @@
       left: 0;
       width: 100%;
       height: 100%;
+      border-top-left-radius: var(--border-radius-large);
+      border-top-right-radius: var(--border-radius-large);
       background-image: var(
         --current-project-background,
         var(--netcompany-background)
@@ -18,27 +20,6 @@
       mask-image: var(--radial-background-mask);
       pointer-events: none;
       z-index: 0;
-    }
-
-    // Project-specific background overrides
-    &.show-netcompany {
-      --current-project-background: var(--netcompany-background);
-    }
-
-    &.show-lego {
-      --current-project-background: var(--lego-background);
-    }
-
-    &.show-moesgaard {
-      --current-project-background: var(--moesgaard-background);
-    }
-
-    &.show-pdp {
-      --current-project-background: var(--pdp-background);
-    }
-
-    &.show-sdu-game {
-      --current-project-background: var(--sdu-background);
     }
   }
 
@@ -71,7 +52,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        height: 50%;
+        height: 250px;
         background: linear-gradient(
           to bottom,
           rgba(255, 255, 255, 0),
@@ -214,7 +195,7 @@
           transition: margin-top 1s ease;
 
           &.video-playing {
-            margin-top: var(--margin-bottom);
+            margin-top: 0;
           }
 
           &:last-of-type {
@@ -316,14 +297,15 @@
 
               .stat-box-img {
                 width: 100%;
-                aspect-ratio: 1/1;
+                height: 100%;
                 border-radius: var(--border-radius-small);
+                overflow: hidden;
 
                 img {
                   width: 100%;
                   height: 100%;
                   object-fit: cover;
-                  border-radius: var(--border-radius-small);
+                  display: block;
                 }
               }
 
@@ -386,7 +368,7 @@
 
           .video-scroll-player-container {
             margin-top: var(--margin-bottom);
-            margin-bottom: calc(2 * var(--margin-bottom));
+            margin-bottom: var(--margin-bottom);
             aspect-ratio: 16/9;
             position: relative;
             overflow: hidden;
