--- a/SCSS/sections/_skillscarrousel.scss
+++ b/SCSS/sections/_skillscarrousel.scss
@@ -51,8 +51,8 @@
   }
   .tag-list li {
     font-size: var(--font-size-h5);
-    padding: 1rem 1.5rem;
-    border-radius: var(--border-radius-medium);
+    padding: 0.8rem 0.9rem;
+    border-radius: var(--border-radius-large);
     background-color: var(--skills-background-color);
     box-shadow: var(--skills-section-tags-shadow);
   }
